- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 4.0.2
- 
    None
- 
        2b3d4685dbb08106dba05d3261533fde8a9706d2
How to reproduce:
- You'll need two kits.
- Remove the compiler from kit A. Make sure that kit B is functional.
- Switch your project (qbs for example) to kit A.
- Wait until parsing etc. is done. The build button is now disabled.
- Switch your project's kit to B (the working kit).
What happens:
- The build button will not be enabled. Even reparsing the qbs project does not help.
What should happen:
- Changing to the functional kit B should reparse the project and enable the build button.
| For Gerrit Dashboard: QTCREATORBUG-16545 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 165258,5 | QbsProjectManager: Have one qbs::Project per target | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |